fix animation inp project section  not trigerred on mobile device

--- a/src/style.css
+++ b/src/style.css
@@ -330,6 +330,7 @@ a:is(:link, :active, :visited).active {
 
 .project {
   margin-top: 10rem;
+  /* overflow: hidden; */
 }
 
 .card-container {
@@ -496,17 +497,17 @@ a:is(:link, :active, :visited).active {
 
 .cta-logo:nth-child(1) {
   transform: translateX(50px);
-  transition-delay: 1.5s;
+  transition-delay: 1.25s;
 }
 
 .cta-logo:nth-child(2) {
   transform: translateX(100px);
-  transition-delay: 1.75s;
+  transition-delay: 1.5s;
 }
 
 .cta-logo:nth-child(3) {
   transform: translateX(150px);
-  transition-delay: 2s;
+  transition-delay: 1.75s;
 }
 
 .cta.animate-cta .cta-logo {
@@ -522,15 +523,15 @@ a:is(:link, :active, :visited).active {
 .cta-arrow {
   opacity: 0;
   visibility: hidden;
-  transition: all 0.5s;
-  transition-delay: 1.5s;
+  transition: all 0.3s;
+  transition-delay: 1s;
 }
 
 .cta.animate-cta .cta-arrow {
   opacity: 1;
   visibility: visible;
-  animation: animate-slide 2s alternate;
-  animation-delay: 1.5s;
+  animation: animate-slide 1350ms alternate;
+  animation-delay: 1.1s;
 }
 
 /* .cta.animate-cta,
@@ -628,6 +629,20 @@ footer {
 
   100% {
     transform: translateX(0);
+  }
+}
+
+@keyframes animate-down {
+  0% {
+    transform: rotate(90deg) translateX(0);
+  }
+
+  50% {
+    transform: rotate(90deg) translateX(-180px);
+  }
+
+  100% {
+    transform: rotate(90deg) translateX(0);
   }
 }
 
@@ -783,9 +798,17 @@ footer {
   }
 
   .cta-arrow {
-    transform: rotate(90deg);
+    /* transform: rotate(90deg); */
     width: 78px;
     margin-top: -10px;
+    /* transition-delay: 0; */
+  }
+
+  .cta.animate-cta .cta-arrow {
+    /* opacity: 1; */
+    /* visibility: visible; */
+    animation: animate-down 2s forwards;
+    /* animation-delay: 1.5s; */
   }
 
   .cta-button {
@@ -830,6 +853,7 @@ footer {
 
   .navbar {
     position: absolute;
+    z-index: 99;
     top: 93px;
     height: 100vh;
     /* left: 0; */
